added a all section

--- a/index.html
+++ b/index.html
@@ -1,13 +1,124 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hero Travel</title>
-    <link rel="stylesheet" href="styles/styles.css">
-    <link rel="stylesheet" href="styles/styles.responsive">
-</head>
-<body>
-    <h1>Check...</h1>
-</body>
+    <link rel="stylesheet" href="styles/styles.css" />
+    <link rel="stylesheet" href="styles/recponsive.css" />
+  </head>
+  <body>
+    <header>
+      <!-- navbar section -->
+      <nav class="header-section">
+        <div class="nav-container">
+          <img src="./Images/Group 40071 (2).png" alt="" />
+          <p>Hero <span class="special">Travel</span></p>
+        </div>
+        <div class="items-container">
+          <a href=""><span class="special">Home</span></a>
+          <a href="">Packages</a>
+          <a href="">Testimonial</a>
+          <a href="">Blog</a>
+          <a href="">Contact</a>
+        </div>
+      </nav>
+    </header>
+    <main>
+      <!-- banner section -->
+      <section>
+        <div class="banner-section">
+          <div class="banner-text">
+            <h2>Explore Your Travel</h2>
+            <p>
+              Dolor sit amet consectetur. Nullam suspendisse vitae ultricies
+              dolor adipiscing. In et odio <br />
+              enim ac quis sapien urna eu phasellus.
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <!-- banner-container -->
+      <section>
+        <div class="banner-container">
+          <div class="banner-content">
+            <h3>Our Popular Tours</h3>
+            <p>
+              Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra
+              odio sit massa. Sodales dictumst nec nibh pellentesque.
+            </p>
+            <p>
+              . Tempus euismod lacus mauris dignissim quis in ultrices. Magna
+              nullam odio neque diam. Sociis erat at .
+            </p>
+            <p>
+              . Adipiscing ornare pellentesque mauris volutpat tortor vitae
+              platea porta lacus. Lectus suspendisse nullam.
+            </p>
+            <p>
+              . Accumsan eget et turpis praesent lorem egestas enim elit
+              bibendum. Risus at in.
+            </p>
+            <p>
+              Amet consectetur. Vulputate commodo felis molestie risus ornare
+              nulla amet et. Libero commodo sagittis dignissim adipiscing quis.
+              Habitant adipiscing risus natoque aliquet. Id bibendum nunc
+              senectus semper tincidunt.
+            </p>
+            <button class="common-button">Read More</button>
+          </div>
+          <div class="banner-img-container">
+            <img src="./Images/Rectangle 4.png" alt="" />
+          </div>
+        </div>
+      </section>
+
+      <!-- header-destination -->
+      <section>
+        <div class="header-destination">
+          <div class="destination-title">
+            <h3>Choose Your Destination</h3>
+            <p class="common-text">
+              Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra
+              odio sit massa. <br />
+              Sodales dictumst nec nibh pellentesque.
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <!-- card container -->
+      <section class="card-container">
+        <div class="row">
+          <div>
+            <img src="./Images/Rectangle 5.png" alt="" />
+          </div>
+          <div>
+            <img src="./Images/Rectangle 8.png" alt="" />
+          </div>
+        </div>
+        <div class="row">
+          <div>
+            <img src="./Images/Rectangle 6.png" alt="" />
+          </div>
+          <div>
+            <img src="./Images/Rectangle 7.png" alt="" />
+          </div>
+          <div>
+            <img src="./Images/Rectangle 9.png" alt="" />
+          </div>
+        </div>
+        <div class="row">
+          <div>
+            <img src="Images/Rectangle 11.png" alt="" />
+          </div>
+          <div>
+            <img src="Images/Rectangle 10.png" alt="" />
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer></footer>
+  </body>
 </html>
