--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Hero Travel</title>
     <link rel="stylesheet" href="styles/styles.css" />
     <link rel="stylesheet" href="styles/recponsive.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    
   </head>
   <body>
     <header>
@@ -118,7 +120,81 @@
           </div>
         </div>
       </section>
+
+      <!-- gallery section -->
+       <section class="gallery-section">
+        <div class="gallery-container">
+         <div class="single-gallery">
+          <h3>Handpicked Hotels</h3>
+          <p class="common-text">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+         </div>
+         <div class="single-gallery gallery-title">
+          <h3>Handpicked Hotels</h3>
+          <p class="common-text">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+         </div>
+         <div class="single-gallery">
+          <h3>Handpicked Hotels</h3>
+          <p class="common-text">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
+         </div>
+        </div>
+       </section>
+
+       <!-- header section -->
+        <section>
+          <div class="header-destination">
+            <div class="destination-title">
+              <h3>Choose Your Destination</h3>
+              <p class="common-text">
+                Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra
+                odio sit massa. <br />
+                Sodales dictumst nec nibh pellentesque.
+              </p>
+            </div>
+          </div>
+        </section>
+      
+          <section>
+            <div class="banner-container">
+              <div class="banner-content">
+                <h3>A Simple Perfect Place To Get Lost</h3>
+                <p>
+                  Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. 
+                </p>
+                <p>
+                   . Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus suspendisse nullam.
+                </p>
+                <p>
+                   . Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus suspendisse nullam.
+                </p>
+                <button class="common-button">Read More</button>
+              </div>
+              <div class="banner-img-container banner-img">
+                <img src="./Images/Group 40089.png" alt="" />
+              </div>
+            </div>
+          </section>
+
+        <!-- news section -->
+        <section>
+          <div class="news-container">
+            <div class="newsletter-title">
+              <h4>Newsletter</h4>
+              <p>Get your daily dose of travel news & tips. Sign
+                <br> up today!</p>
+              <div>
+                <input class="input-btn-1" type="name" name="" id="" placeholder="Enter your name">
+                <br>
+                <input class="input-btn-2" type="email" name="" id="" placeholder="Enter your email">
+              </div>
+              <input type="button" value="Subscribe">
+            </div>
+            <div class="img-content">
+              <img src="./Images/Rectangle 8 (1).png" alt="">
+            </div>
+          </div>
+        </section>
     </main>
-    <footer></footer>
+    <footer>
+    </footer>
   </body>
 </html>
