added a all pojects finished

--- a/index.html
+++ b/index.html
@@ -6,8 +6,13 @@
     <title>Hero Travel</title>
     <link rel="stylesheet" href="styles/styles.css" />
     <link rel="stylesheet" href="styles/recponsive.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+      integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
   <body>
     <header>
@@ -95,106 +100,162 @@
         <div class="row">
           <div>
             <img src="./Images/Rectangle 5.png" alt="" />
+            <div class="section-nam">
+              <h3>Maldives</h3>
+            </div>
           </div>
           <div>
             <img src="./Images/Rectangle 8.png" alt="" />
+            <div class="section-nam">
+              <h3>Indonesia</h3>
+            </div>
           </div>
         </div>
         <div class="row">
           <div>
             <img src="./Images/Rectangle 6.png" alt="" />
+            <div class="container-nam">
+              <h3>srilanka</h3>
+            </div>
           </div>
           <div>
             <img src="./Images/Rectangle 7.png" alt="" />
+            <div class="container-nam container-4">
+              <h3>North America</h3>
+            </div>
           </div>
           <div>
             <img src="./Images/Rectangle 9.png" alt="" />
+            <div class="container-nam">
+              <h3>Kashmir</h3>
+            </div>
           </div>
         </div>
         <div class="row">
           <div>
             <img src="Images/Rectangle 11.png" alt="" />
+            <div class="section-nam">
+              <h3>Bangladesh</h3>
+            </div>
           </div>
           <div>
             <img src="Images/Rectangle 10.png" alt="" />
+            <div class="section-nam">
+              <h3>Bandarban</h3>
+            </div>
           </div>
         </div>
       </section>
 
       <!-- gallery section -->
-       <section class="gallery-section">
+      <section class="gallery-section">
         <div class="gallery-container">
-         <div class="single-gallery">
-          <h3>Handpicked Hotels</h3>
-          <p class="common-text">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
-         </div>
-         <div class="single-gallery gallery-title">
-          <h3>Handpicked Hotels</h3>
-          <p class="common-text">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
-         </div>
-         <div class="single-gallery">
-          <h3>Handpicked Hotels</h3>
-          <p class="common-text">Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet. </p>
-         </div>
+          <div class="single-gallery">
+            <h3>Handpicked Hotels</h3>
+            <p class="common-text">
+              Amet consectetur. Vulputate commodo felis molestie risus ornare
+              nulla amet et. Libero commodo sagittis dignissim adipiscing quis.
+              Habitant adipiscing risus natoque aliquet.
+            </p>
+          </div>
+          <div class="single-gallery gallery-title">
+            <h3>Handpicked Hotels</h3>
+            <p class="common-text">
+              Amet consectetur. Vulputate commodo felis molestie risus ornare
+              nulla amet et. Libero commodo sagittis dignissim adipiscing quis.
+              Habitant adipiscing risus natoque aliquet.
+            </p>
+          </div>
+          <div class="single-gallery">
+            <h3>Handpicked Hotels</h3>
+            <p class="common-text">
+              Amet consectetur. Vulputate commodo felis molestie risus ornare
+              nulla amet et. Libero commodo sagittis dignissim adipiscing quis.
+              Habitant adipiscing risus natoque aliquet.
+            </p>
+          </div>
         </div>
-       </section>
+      </section>
 
-       <!-- header section -->
-        <section>
-          <div class="header-destination">
-            <div class="destination-title">
-              <h3>Choose Your Destination</h3>
-              <p class="common-text">
-                Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra
-                odio sit massa. <br />
-                Sodales dictumst nec nibh pellentesque.
-              </p>
-            </div>
+      <!-- header section -->
+      <section>
+        <div class="header-destination">
+          <div class="destination-title">
+            <h3>Choose Your Destination</h3>
+            <p class="common-text">
+              Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra
+              odio sit massa. <br />
+              Sodales dictumst nec nibh pellentesque.
+            </p>
           </div>
-        </section>
-      
-          <section>
-            <div class="banner-container">
-              <div class="banner-content">
-                <h3>A Simple Perfect Place To Get Lost</h3>
-                <p>
-                  Amet consectetur. Vulputate commodo felis molestie risus  ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. 
-                </p>
-                <p>
-                   . Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus suspendisse nullam.
-                </p>
-                <p>
-                   . Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus suspendisse nullam.
-                </p>
-                <button class="common-button">Read More</button>
-              </div>
-              <div class="banner-img-container banner-img">
-                <img src="./Images/Group 40089.png" alt="" />
-              </div>
-            </div>
-          </section>
+        </div>
+      </section>
 
-        <!-- news section -->
-        <section>
-          <div class="news-container">
-            <div class="newsletter-title">
-              <h4>Newsletter</h4>
-              <p>Get your daily dose of travel news & tips. Sign
-                <br> up today!</p>
-              <div>
-                <input class="input-btn-1" type="name" name="" id="" placeholder="Enter your name">
-                <br>
-                <input class="input-btn-2" type="email" name="" id="" placeholder="Enter your email">
-              </div>
-              <input type="button" value="Subscribe">
-            </div>
-            <div class="img-content">
-              <img src="./Images/Rectangle 8 (1).png" alt="">
-            </div>
+      <section>
+        <div class="banner-container">
+          <div class="banner-content">
+            <h3>A Simple Perfect Place To Get Lost</h3>
+            <p>
+              Amet consectetur. Vulputate commodo felis molestie risus ornare
+              nulla amet et. Libero commodo sagittis dignissim adipiscing quis.
+            </p>
+            <p>
+              . Adipiscing ornare pellentesque mauris volutpat tortor vitae
+              platea porta lacus. Lectus suspendisse nullam.
+            </p>
+            <p>
+              . Adipiscing ornare pellentesque mauris volutpat tortor vitae
+              platea porta lacus. Lectus suspendisse nullam.
+            </p>
+            <button class="common-button">Read More</button>
           </div>
-        </section>
+          <div class="banner-img-container banner-img">
+            <img src="./Images/Group 40089.png" alt="" />
+          </div>
+        </div>
+      </section>
+
+      <!-- news section -->
+      <section>
+        <div class="main-letter">
+            <div class="first-letter">
+                <h3 class="hotel-title">Newsletter</h3>
+                <p class="hotel-description">Get your daily dose of travel news & tips. Sign<br> up today!</p>
+                <form>
+                    <input class="first-form" placeholder="Enter your name" type="text" name="" id="">
+                    <br>
+                    <input class="second-form" placeholder="Enter your email" type="email" name="" id="">
+                    <br>
+                    <input class="third" type="button" value="Subscribe">
+                </form>
+            </div>
+        <div class="img-container-letter">
+            <img src="Images/Rectangle 8 (1).png" alt="">
+        </div>
+      </div>
+    </section>
     </main>
-    <footer>
+    <footer class="footer-section">
+      <div class="footer-title">
+        <img src="./Images/Group 40071 (2).png" alt="" />
+        <h3>Hero <span class="special">Travel</span></h3>
+      </div>
+      <div class="footer-description">
+        <p>
+          Lorem ipsum dolor sit amet consectetur. Nulla sit viverra morbi vitae
+          blandit orci potenti vulputate. Leo
+          <br />
+          erat maecenas vitae elementum ultricies nullam.
+        </p>
+        <div class="footer-icon">
+          <i class="fa-brands fa-twitter icon"></i>
+          <i class="fa-brands fa-facebook-f icon"></i>
+          <i class="fa-brands fa-instagram icon"></i>
+          <i class="fa-brands fa-github icon"></i>
+        </div>
+        <hr />
+        <h4>2017, All Rights Reserved.</h4>
+      </div>
     </footer>
   </body>
 </html>
