--- a/index.html
+++ b/index.html
@@ -43,9 +43,19 @@
               enim ac quis sapien urna eu phasellus.
             </p>
           </div>
+          <div class="banner-input">
+            <div>
+              <input type="text" placeholder="Where go" />
+              <input type="text" placeholder="When" />
+              <input type="text" placeholder="Select Type" />
+              <button class="input-btn">Find Now</button>
+              <div class="input-icon">
+                <img src="./Images/Vector.png" alt="" />
+              </div>
+            </div>
+          </div>
         </div>
       </section>
-
       <!-- banner-container -->
       <section>
         <div class="banner-container">
@@ -80,7 +90,6 @@
           </div>
         </div>
       </section>
-
       <!-- header-destination -->
       <section>
         <div class="header-destination">
@@ -94,7 +103,6 @@
           </div>
         </div>
       </section>
-
       <!-- card container -->
       <section class="card-container">
         <div class="row">
@@ -146,7 +154,6 @@
           </div>
         </div>
       </section>
-
       <!-- gallery section -->
       <section class="gallery-section">
         <div class="gallery-container">
@@ -176,7 +183,6 @@
           </div>
         </div>
       </section>
-
       <!-- header section -->
       <section>
         <div class="header-destination">
@@ -190,7 +196,6 @@
           </div>
         </div>
       </section>
-
       <section>
         <div class="banner-container">
           <div class="banner-content">
@@ -214,26 +219,40 @@
           </div>
         </div>
       </section>
-
       <!-- news section -->
       <section>
         <div class="main-letter">
-            <div class="first-letter">
-                <h3 class="hotel-title">Newsletter</h3>
-                <p class="hotel-description">Get your daily dose of travel news & tips. Sign<br> up today!</p>
-                <form>
-                    <input class="first-form" placeholder="Enter your name" type="text" name="" id="">
-                    <br>
-                    <input class="second-form" placeholder="Enter your email" type="email" name="" id="">
-                    <br>
-                    <input class="third" type="button" value="Subscribe">
-                </form>
-            </div>
-        <div class="img-container-letter">
-            <img src="Images/Rectangle 8 (1).png" alt="">
+          <div class="first-letter">
+            <h3 class="hotel-title">Newsletter</h3>
+            <p class="hotel-description">
+              Get your daily dose of travel news & tips. Sign<br />
+              up today!
+            </p>
+            <form>
+              <input
+                class="first-form"
+                placeholder="Enter your name"
+                type="text"
+                name=""
+                id=""
+              />
+              <br />
+              <input
+                class="second-form"
+                placeholder="Enter your email"
+                type="email"
+                name=""
+                id=""
+              />
+              <br />
+              <input class="third" type="button" value="Subscribe" />
+            </form>
+          </div>
+          <div class="img-container-letter">
+            <img src="Images/Rectangle 8 (1).png" alt="" />
+          </div>
         </div>
-      </div>
-    </section>
+      </section>
     </main>
     <footer class="footer-section">
       <div class="footer-title">
